set up user type and model, update docs to match, and handle some of the user endpoints
